syntax/tests/parsing/errors/signature/attributes.resi
module type MissingItem = {
  @attr
}

@attrWithoutItem
